# pinocchio-project

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test.sh
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
program/: Cargo.toml
program/src/: entrypoint.rs  instructions.rs  lib.rs
program/src/processor/: increment.rs  mod.rs
tests/: Cargo.toml
tests/src/: lib.rs
