[workspace]

members = ["program", "tests", "clients/rust"]

resolver = "2"

package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
pinocchio = "0.9.2"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
shank = { version = "0.4.3-alpha.1", features = ["pinocchio"] }
myproject-client = { path = "clients/rust" }
thiserror = "2.0.17"
mollusk-svm = "0.7.0"
solana-sdk = "3.0.0"
borsh = "1.5.7"
solana-program = "3.0.0"
num-derive = "0.4.2"
num-traits = "0.2.15"
