[package]
name = "myproject-client"
description = "Generated client for myproject"
version = { workspace = true }
edition = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
fetch = []
anchor = []
anchor-idl-build = []

[dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", optional = true }
